app/scss/packagegrid.scss
.packagetile {
	display: block;
	margin: 0;
	padding: 0;
	position: relative;
	border-radius: 0.5rem;
	background: #2d2d2d;

	.packagecard {
		overflow: hidden;
		border-radius: 0.5rem;

		.badge {
			position: absolute;
			right: 0.5rem;
			top: 0.5rem;
		}

		.body {
			padding: 0.375rem 0.75rem;

			h3 {
				color: white;
				font-size: 120%;
				font-weight: bold;
				margin: 0;
				padding: 0;
			}

			.subtitle {
				color: rgba(255, 255, 255, 0.7);
				font-size: 100%;
				font-weight: bold;
				margin: 0;
				padding: 0;
			}

			small {
				color: #ddd;
				font-size: 75%;
				font-weight: bold;
			}
		}
	}

	.info-wrapper {
		position: absolute;
		display: none;
		left: 100%;
		top: 0;
		bottom: 0;
		z-index: 1000;
	}

	&.open-left .info-wrapper {
		left: unset;
		right: 100%;

		.info {
			margin: 0 1rem 0 0;
		}
	}

	.info {
		width: 400px;
		margin: 0 0 0 1rem;
		padding: 0.75rem 1.5rem;
		border-radius: 0.5rem;
		background: #2d2d2d;
		box-shadow: 0 0 1rem rgba(0, 0, 0, 0.25), 0 0 2px rgba(0, 0, 0, 0.6);

		p {
			color: white;
		}

		> *:last-child {
			margin-bottom: 0;
		}
	}

	&:has(.packagecard:hover)  {
		box-shadow: 0 0 1rem rgba(0, 0, 0, 0.25), 0 0 2px rgba(0, 0, 0, 0.6);

		.info-wrapper {
			display: block;
		}
	}
}

